[workspace]
resolver = "2"
members = [
    "common", 
    "main_app"
]

[workspace.dependencies]
common = { path = "./common" }
eframe = { version = "0.29.1", features = ["wgpu"] }
egui = "0.29.1"
winit = "0.30.5"
crossbeam = "0.8.4"
rfd = "0.15.1"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Devices_HumanInterfaceDevice",
] }
