[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
sak_rs = { workspace = true }

eframe = { workspace = true }
egui = { workspace = true }
winit = { workspace = true }
crossbeam = { workspace = true }
rfd = { workspace = true }
windows = { workspace = true }
mimalloc = { workspace = true }