[workspace]
resolver = "2"
members = [
    "common", 
    "main_app",
    "global_listener_app"
]

[workspace.dependencies]
common = { path = "./common" }
eframe = { path = "../custom/egui-0.29.1/crates/eframe", features = ["wgpu"] }
egui = { path = "../custom/egui-0.29.1/crates/egui" }
winit = "0.30.5"
crossbeam = "0.8.4"
interprocess = "2.2.2"
bytemuck = "1.20.0"
rfd = "0.15.1"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_Pipes"
] }