[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
winit = { workspace = true }
crossbeam = { workspace = true }
interprocess = { workspace = true }
bytemuck = { workspace = true }
rfd = { workspace = true }
windows = { workspace = true }